# dynamic-prompt-harness

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
docs/: README.md
docs/explanation/: architecture.md  dynamic-prompting.md  philosophy.md
docs/how-to/: add-custom-harness.md  coexist-with-other-hooks.md  troubleshoot.md
docs/reference/: cli.md  harness-patterns.md  registry-schema.md  subprocess-contract.md  triggers.md
docs/swe/: swe.2-software-architecture.md
docs/sys/: sys.1-requirements-elicitation.md  sys.2-system-requirements.md  sys.3-architectural-design.md
docs/tutorial/: 01-first-harness.md
examples/: registry.sample.json
hooks/: hooks.json
src/dynamic_prompt_harness/: __main__.py  dispatcher.py
src/dynamic_prompt_harness/adapters/: claude_code.py
src/dynamic_prompt_harness/core/: composer.py  errors.py  executor.py  io_contract.py  logger.py  registry.py  schema.py
tests/: test_claude_code_adapter.py  test_composer.py  test_composition_full_eval.py  test_dispatcher.py  test_e2e.py  test_errors.py  test_executor.py  test_io_contract.py  test_logger.py  test_logger_decision_record.py  test_registry.py  test_schema.py  test_schema_invariants.py  test_version_consistency.py
tests/fixtures/: pre_tool_use_write.json  user_prompt_submit.json
