[project]
name = "dynamic-prompt-harness"
version = "0.1.0"
description = "Vendor-neutral hook dispatcher for Claude Code and other agents"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dynamic_prompt_harness"]
